--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,21 @@
   </properties>
 
   <dependencies>
+    <dependency>  
+        <groupId>com.fasterxml.jackson.core</groupId>  
+        <artifactId>jackson-core</artifactId>  
+        <version>2.13.1</version>  
+    </dependency>  
+    <dependency>  
+        <groupId>com.fasterxml.jackson.core</groupId>  
+        <artifactId>jackson-databind</artifactId>  
+        <version>2.13.1</version>  
+    </dependency>  
+    <dependency>  
+        <groupId>com.fasterxml.jackson.core</groupId>  
+        <artifactId>jackson-annotations</artifactId>  
+        <version>2.13.1</version>  
+    </dependency>  
     <dependency>
         <groupId>commons-lang</groupId>
         <artifactId>commons-lang</artifactId>
