--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,11 @@
   </properties>
 
   <dependencies>
+    <dependency>
+        <groupId>com.thoughtworks.xstream</groupId>
+        <artifactId>xstream</artifactId>
+        <version>1.4.20</version>
+    </dependency>
     <dependency>  
         <groupId>com.fasterxml.jackson.core</groupId>  
         <artifactId>jackson-core</artifactId>  
