--- a/pom.xml
+++ b/pom.xml
@@ -24,21 +24,11 @@
         <artifactId>xstream</artifactId>
         <version>1.4.20</version>
     </dependency>
-    <dependency>  
-        <groupId>com.fasterxml.jackson.core</groupId>  
-        <artifactId>jackson-core</artifactId>  
-        <version>2.13.1</version>  
-    </dependency>  
-    <dependency>  
-        <groupId>com.fasterxml.jackson.core</groupId>  
-        <artifactId>jackson-databind</artifactId>  
-        <version>2.13.1</version>  
-    </dependency>  
-    <dependency>  
-        <groupId>com.fasterxml.jackson.core</groupId>  
-        <artifactId>jackson-annotations</artifactId>  
-        <version>2.13.1</version>  
-    </dependency>  
+    <dependency>
+        <groupId>com.google.code.gson</groupId>
+        <artifactId>gson</artifactId>
+        <version>2.10.1</version>
+    </dependency>
     <dependency>
         <groupId>commons-lang</groupId>
         <artifactId>commons-lang</artifactId>
@@ -48,13 +38,13 @@
     <dependency>
         <groupId>com.google.guava</groupId>
         <artifactId>guava</artifactId>
-        <version>21.0</version>
+        <version>32.0.0-jre</version>
         <scope>compile</scope>
     </dependency>
     <dependency>
         <groupId>org.yaml</groupId>
         <artifactId>snakeyaml</artifactId>
-        <version>1.27</version>
+        <version>1.33</version>
         <scope>compile</scope>
     </dependency>
     <dependency>
